--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -6,6 +6,70 @@
     font-family: calibri;
 }
 
+#header {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    border-bottom: 2px solid rgb(0, 141, 68);
+    cursor: pointer;
+}
+
+.logo  {
+    font-family:Mistral;
+    font-size: 30px;
+    color: rgb(0, 141, 68);
+}
+
+#slogan span {
+    color: rgb(0, 141, 68);
+}
+
+#navlinks ul {
+    display: flex;
+    align-items: center;
+    gap: 3vw;
+}
+
+
+#navlinks ul li {
+    list-style-type: none;
+    border-radius: 20px;
+    color: rgb(0, 141, 68);
+    padding: 3px;
+}
+
+#profile ,#heart {
+    display: none;
+}
+
+
+#navlinks #home {
+    border: none;
+    background-color: rgb(0, 141, 68);
+    color: white;
+    transition: 0.5s ease;
+}
+
+#navlinks #home:hover {
+    border: 1px solid rgb(0, 141, 68);
+    border-radius: 15px;
+    background-color: white;
+    color: rgb(0, 141, 68);
+}
+
+#navlinks .nav-hover {
+    transition: 0.5s ease;
+}
+
+#navlinks .nav-hover:hover {
+    border-radius: 20px;
+    background-color: rgb(0, 141, 68);
+    color: white;
+}
+
+
+/* ------------------------------------------------------ */
+
 .display_flex {
     display: flex;
     gap: 1vw;
