--- a/frontend/styles/signin_signup.css
+++ b/frontend/styles/signin_signup.css
@@ -10,7 +10,7 @@
 }
 
 .modal-content h1 {
-    color: #dfa37f;
+    color: rgb(0, 141, 68);
     font-family: Mistral;
 }
 
@@ -38,7 +38,7 @@
     justify-content: space-between;
 }
 
-input {
+.sign-container input, select  {
     width: 100%;
     padding:10px;
     border: none;
@@ -48,7 +48,7 @@ input {
     color:white;
 }
 
-input::placeholder {
+.sign-container input::placeholder {
     color: #999;
 }
 
@@ -67,8 +67,8 @@ input::placeholder {
     font-family: Mistral;
 }
 .login-button:hover {
-    box-shadow:0px 0px 10px #dfa37f;
-    border: solid 2px #96652d;
+    box-shadow:0px 0px 10px darkgreen;
+    border: solid 2px rgb(0, 141, 68);
 }
 /*  the container  */
 
@@ -80,7 +80,7 @@ input::placeholder {
 
 
 .sign-container a {
-    color: #dfa37f;
+    color: rgb(0, 141, 68);;
     text-decoration:none;
     font-weight: bold;
 }
@@ -92,11 +92,11 @@ input::placeholder {
 
 .close {
     align-self: flex-end;
-    color: #dfa37f;
+    color:  rgb(0, 141, 68);;
     font-size: 30px;
     cursor: pointer;
 }
 .close:hover,
 .close:focus {
-    color:red;
+    color:darkgreen;
 }
