--- a/frontend/styles/admin.css
+++ b/frontend/styles/admin.css
@@ -91,3 +91,39 @@ body {
 }
 
 /* ---------------------------------------------------- */
+
+.right{
+    position: relative;
+    top: 20px;
+    left: 260px;
+    display: flex;
+    flex-direction: column;
+    gap: 10vh;
+}
+.card-container {
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 5vw;
+    
+}
+.card-container  .card {
+    background-color: rgba(207, 217, 210, 0.6);
+    width: 200px;
+    height: 100%;
+    box-shadow: 0 7px 25px rgba(0, 0 ,0, 0.8);
+    border-radius: 20px;
+    cursor: pointer;
+}
+.card-container  .card div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.icon-box {
+    color: rgb(0, 141, 68);;
+}
+/* ---------------------------------------- */
