--- a/frontend/styles/admin.css
+++ b/frontend/styles/admin.css
@@ -127,3 +127,55 @@ body {
     color: rgb(0, 141, 68);;
 }
 /* ---------------------------------------- */
+
+#add_user, #add_product {
+    background-color: rgb(0, 141, 68);
+    color: white;
+    padding: 8px 16px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-bottom: 16px;
+}
+
+#add_user:hover,#add_product:hover {
+    background-color: #007F3D;
+}
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+th, td {
+    padding: 8px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
+}
+
+th {
+    background-color: rgb(0, 141, 68);
+    color: white;
+}
+
+/* Style the first column (User_id) */
+td:first-child {
+    font-weight: bold;
+}
+
+/* Style the Update_User and Delete_User columns */
+td:nth-last-child(2),
+td:last-child {
+    text-align: center;
+    cursor: pointer;
+}
+
+/* Change cursor to a pointer when hovering over icons */
+.fa-pen, .fa-trash {
+    cursor: pointer;
+}
+/* ------------------------------*/
+
+#customer , #product{
+    display: none;
+}
